--- a/web-assets/static-pages/otp.html
+++ b/web-assets/static-pages/otp.html
@@ -2,78 +2,89 @@
 <html lang="en">
 
 <head>
-  <title>Check your email</title>
+  <title>Sign In with Topcoder</title>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="shortcut icon" href="./images/favicon.ico" />
+  <link rel="shortcut icon" type="image/png" href="https://www.topcoder.com/favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed:wght@500&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="./otp.css" />
   <script src="https://tc-public-static-files.topcoder.com/topcoder-auth/js/jquery-3.5.1.min.js"></script>
   <script type="text/javascript" src="otp.js"></script>
 </head>
 
-<body class="center-align-card checkemail-card">
-  <!-- Page Wrapper -->
+<body>
   <div class="page-wrapper">
-    <!-- For ADA - Skip to Content Area -->
-    <a class="action skip" href="#contentarea">Skip to Content</a>
-    <!-- Page Content Area -  Header + Main content -->
-    <div class="page-content">
-      <header class="header">
-        <img src="./images/email.png" alt="Check Email" width="104" height="89" />
-      </header>
-      <main id="main" class="page-main">
-        <a id="contentarea" tabindex="-1"></a>
-        <h1 id="page-title-heading" class="page-title-heading">
-          Check your email <br />and enter your password
-        </h1>
-        <div class="messages">
-          <div role="alert" class="message error">
-            <div id="error" class="message-content"></div>
-            <span class="close-error" tabindex="0">
-              <span class="clip-me">Close</span>
-            </span>
+    <div class="row">
+      <div class="left-column">
+        <div class="signin-column">
+          <div class="signin-header">
+            <img class="topcoder-logo" src="./topcoderlogo-black.png">
+            <div class="header-text">Topcoder login</div>
           </div>
-          <div role="alert" class="message notify">
-            <div id="notify" class="message-content"></div>
-            <span class="close-error" tabindex="0">
-              <span class="clip-me">Close</span>
-            </span>
+          <div class="info">Please check the email you used to register your
+            Topcoder account for an email with a <span class="black">6 digit code</span>.
+            Enter the code below to login</div>
+          <div class="messages">
+            <div class="message-wrapper">
+              <div role="alert" class="message error">
+                <div class="message-icon">&#9888;</div>
+                <div id="error" class="message-content"></div>
+                <div class="close-error" tabindex="0">&#10006;</div>
+              </div>
+            </div>
+            <div class="message-wrapper">
+              <div role="alert" class="message notify">
+                <div class="message-icon">&#10003;</div>
+                <div id="notify" class="message-content"></div>
+                <div class="close-error" tabindex="0">&#10006;</div>
+              </div>
+            </div>
           </div>
+          <form method="GET" id="verifyOtp" action="#" class="digit-group" autocomplete="off">
+            <input id="state" name="state" value="" type="hidden" />
+            <input id="returnUrl" name="returnUrl" value="" type="hidden" />
+            <input id="otp" name="otp" value="" type="hidden" />
+            <input type="number" inputmode="numeric" pattern="\d" title="Numeric"
+              onKeyPress="if(this.value.length===1) return false;" id="code1" class="text-center w-8 xxs:w-12 mx-1"
+              maxlength="1" onPaste="pasteHandler(event, 'code', 1)" onKeydown="keydownHandler(event, 'code', 1)"
+              onKeyup="autotab(event, 1, 'code2')" required />
+            <input type="number" inputmode="numeric" pattern="\d" title="Numeric"
+              onKeyPress="if(this.value.length===1) return false;" id="code2" class="text-center w-8 xxs:w-12 mx-1"
+              maxlength="1" onPaste="pasteHandler(event, 'code', 2)" onKeydown="keydownHandler(event, 'code', 2)"
+              onKeyup="autotab(event, 2, 'code3')" required />
+
+            <input type="number" inputmode="numeric" pattern="\d" title="Numeric"
+              onKeyPress="if(this.value.length===1) return false;" id="code3" class="text-center w-8 xxs:w-12 mx-1"
+              maxlength="1" onPaste="pasteHandler(event, 'code', 3)" onKeydown="keydownHandler(event, 'code', 3)"
+              onKeyup="autotab(event, 3, 'code4')" required />
+
+            <input type="number" inputmode="numeric" pattern="\d" title="Numeric"
+              onKeyPress="if(this.value.length===1) return false;" id="code4" class="text-center w-8 xxs:w-12 mx-1"
+              maxlength="1" onPaste="pasteHandler(event, 'code', 4)" onKeydown="keydownHandler(event, 'code', 4)"
+              onKeyup="autotab(event, 4, 'code5')" required />
+
+            <input type="number" inputmode="numeric" pattern="\d" title="Numeric"
+              onKeyPress="if(this.value.length===1) return false;" id="code5" class="text-center w-8 xxs:w-12 mx-1"
+              maxlength="1" onPaste="pasteHandler(event, 'code', 5)" onKeydown="keydownHandler(event, 'code', 5)"
+              onKeyup="autotab(event, 5, 'code6')" required />
+
+            <input type="number" inputmode="numeric" pattern="\d" title="Numeric"
+              onKeyPress="if(this.value.length===1) return false;" id="code6" class="text-center w-8 xxs:w-12 mx-1"
+              maxlength="1" onPaste="pasteHandler(event, 'code', 6)" onKeydown="keydownHandler(event, 'code', 6)"
+              onKeyup="autotab(event, 6, '')" required />
+          </form>
+          <a href="#" id="resend" class="resend-link">Resend the 6 digit code</a>
         </div>
-        <form method="GET" id="verifyOtp" action="#">
-          <input id="state" name="state" value="" type="hidden" />
-          <input id="returnUrl" name="returnUrl" value="" type="hidden" />
-          <div id="otpdiv" class="input-field active">
-            <label for="otp">One Time Password</label>
-            <input id="otp" name="otp" size="6" class="input-text" autocomplete="off" />
-          </div>
-          <div id="sb" class="action-wrapper">
-            <button type="submit" id="continueBtn" class="continue-btn" disabled="disabled">
-              Continue
-            </button>
-          </div>
-        </form>
-        <div id="resend" style="text-align:left;">
-          <a>resend code</a>
-        </div>
-      </main>
-    </div>
-    <footer class="footer">
-      <div class="copyright-text">
       </div>
-      <a class="privacy-policy" href="https://www.topcoder.com/privacy-policy/">Privacy Policy</a>
-    </footer>
+      <div class="logo-column">
+        <div class="header">community</div>
+        <div class="title">WELCOME BACK!</div>
+      </div>
+    </div>
   </div>
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      var copyRightText = document.getElementsByClassName("copyright-text");
-      copyRightText[0].innerHTML = "<strong>&copy;</strong> " + new Date().getFullYear() + " Topcoder. All Rights Reserved"
-    });
-  </script>
 </body>
 
 </html>
