--- a/web-assets/static-pages/otp.html
+++ b/web-assets/static-pages/otp.html
@@ -21,7 +21,7 @@
       <div class="left-column">
         <div class="signin-column">
           <div class="signin-header">
-            <img class="topcoder-logo" src="./topcoderlogo-black.png">
+            <img class="topcoder-logo" src="./images/topcoderlogo-black.png">
             <div class="header-text">Topcoder login</div>
           </div>
           <div class="info">Please check the email you used to register your
