--- a/web-assets/static-pages/dice-verify-callback.html
+++ b/web-assets/static-pages/dice-verify-callback.html
@@ -10,7 +10,9 @@
 
     <h1>Verifying credentials....</h1>
 
-    <script type="text/javascript" src="oidc-client.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/oidc-client/1.11.5/oidc-client.min.js"
+        integrity="sha512-pGtU1n/6GJ8fu6bjYVGIOT9Dphaw5IWPwVlqkpvVgqBxFkvdNbytUh0H8AP15NYF777P4D3XEeA/uDWFCpSQ1g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
         new Oidc.UserManager().signinPopupCallback()
     </script>
