--- a/web-assets/static-pages/dice-verify-callback.html
+++ b/web-assets/static-pages/dice-verify-callback.html
@@ -7,14 +7,29 @@
 
 <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
-
-    <h1>Verifying credentials....</h1>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/oidc-client/1.11.5/oidc-client.min.js"
         integrity="sha512-pGtU1n/6GJ8fu6bjYVGIOT9Dphaw5IWPwVlqkpvVgqBxFkvdNbytUh0H8AP15NYF777P4D3XEeA/uDWFCpSQ1g=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
-        new Oidc.UserManager().signinPopupCallback()
+        const userManager = new Oidc.UserManager({
+            response_type: "code",
+            response_mode: "query",
+            loadUserInfo: false
+        });
+        userManager.settings.metadata = {
+            issuer: `https://tc-vcauth-uat.diceid.com`,
+            token_endpoint: `https://tc-vcauth-uat.diceid.com/vc/connect/token`
+        };
+        userManager.signinRedirectCallback().then(
+            (user) => {
+                console.log(user)
+                window.parent.postMessage(user, 'https://accounts-auth0.topcoder-dev.com')
+            },
+            (error) => {
+                console.log(error)
+                window.parent.postMessage({}, 'https://accounts-auth0.topcoder-dev.com')
+            }
+        );
     </script>
 </body>
 
