--- a/web-assets/static-pages/otp.html
+++ b/web-assets/static-pages/otp.html
@@ -13,9 +13,21 @@
   <link rel="stylesheet" href="./otp.css" />
   <script src="https://tc-public-static-files.topcoder.com/topcoder-auth/js/jquery-3.5.1.min.js"></script>
   <script type="text/javascript" src="otp.js"></script>
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','{{GTM}}');</script>
+  <!-- End Google Tag Manager -->
+  <script type="text/javascript" async="" src="https://cdn.heapanalytics.com/js/heap-4240734066.js"></script>
 </head>
 
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{GTM}}"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <div class="page-wrapper">
     <div class="row">
       <div class="left-column">
