add logo to verify callback

--- a/web-assets/static-pages/dice-verify-callback.html
+++ b/web-assets/static-pages/dice-verify-callback.html
@@ -5,12 +5,15 @@
     <title>Processing verfiable credentials</title>
 </head>
 
-<body>
+<body style="text-align: center;padding-top: 57px;">
     <noscript> You need to enable JavaScript to run this app. </noscript>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/oidc-client/1.11.5/oidc-client.min.js"
         integrity="sha512-pGtU1n/6GJ8fu6bjYVGIOT9Dphaw5IWPwVlqkpvVgqBxFkvdNbytUh0H8AP15NYF777P4D3XEeA/uDWFCpSQ1g=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
+        window.parent.postMessage({ type: 'DICE_VERIFICATION_START' }, 'https://www.{{DOMAIN}}')
+        window.parent.postMessage({ type: 'DICE_VERIFICATION_START' }, 'https://community-app.{{DOMAIN}}')
+        window.parent.postMessage({ type: 'DICE_VERIFICATION_START' }, 'https://{{CA_SUB_1}}.{{DOMAIN}}')
         const userManager = new Oidc.UserManager({
             response_type: "code",
             response_mode: "query",
@@ -34,6 +37,7 @@
             }
         );
     </script>
+    <img src="./images/dicelogobig.png">
 </body>
 
 </html>
