--- a/web-assets/auth0/dev-tenant/universal-login.html
+++ b/web-assets/auth0/dev-tenant/universal-login.html
@@ -129,11 +129,10 @@
                         "user_exists": "The user already exists."
                     }
                 },
-                title: 'Topcoder Login',
                 emailInputPlaceholder: 'Email',
                 passwordInputPlaceholder: 'Password',
                 signUpTerms: 'Yes, I understand and agree to the <a href="https://www.topcoder.com/policy/privacy-policy" target="_new"">Privacy Policy</a> and <a href="https://www.topcoder.com/policy/terms-and-conditions"  target="_new">Terms</a> of Topcoder.',
-                signUpTitle: 'Join Topcoder',
+                signUpTitle: 'Join Topcoder (testing)',
                 signUpLabel: 'Sign Up',
                 signUpSubmitLabel: 'Sign Up',
                 signUpWithLabel: '%s',
@@ -309,7 +308,7 @@
                     {
                         type: "select",
                         name: "country",
-                        placeholder: "Select your country (current location)",
+                        placeholder: "Location", // "Select your country (current location)",
                         options: optionsObj,
                         // The following properties are optional
                         prefill: "us"
