fix: make labels readable
* https://topcoder.atlassian.net/browse/UN-719

Signed-off-by: Rakib Ansary <rakibansary@gmail.com>

--- a/web-assets/auth0/dev-tenant/universal-login.html
+++ b/web-assets/auth0/dev-tenant/universal-login.html
@@ -90,10 +90,10 @@
         var language;
         var optionsObj = Array();
       	var primaryRoleOptionsObj = [{
-            label: 'Topcoder Talent',
+            label: 'Talent- join as a community member',
             value: 'Topcoder Talent'
         }, {
-            label: 'Topcoder Customer',
+            label: 'Customer- join to get work done',
             value: 'Topcoder Customer'
         }];
         var regSource = config.extraParams.reg_source || null;
@@ -303,7 +303,7 @@
                   	{
                         type: "select",
                         name: "primaryRole",
-                        placeholder: "Select your Primary Role",
+                        placeholder: "Select your role",
                         options: primaryRoleOptionsObj,
                       	fieldLabel: 'The role you select maybe changed in your Profile Settings.',
                       	fieldPlaceholder: 'Talent join to learn, complete, connect and find freelance gig work. Customers join to launch challenges, find freelancers, and get work done.'
