fix: terms & conditions url
Signed-off-by: Rakib Ansary <rakibansary@topcoder.com>

--- a/web-assets/auth0/prod-tenant/universal-login.html
+++ b/web-assets/auth0/prod-tenant/universal-login.html
@@ -127,7 +127,7 @@
                 title: 'Topcoder Login',
                 emailInputPlaceholder: 'Email',
                 passwordInputPlaceholder: 'Password',
-                signUpTerms: 'Yes, I understand and agree to the <a href="https://www.topcoder.com/policy/privacy-policy" target="_new"">Privacy Policy</a> and <a href="https://www.topcoder.com/policy/terms-and-conditions"  target="_new">Terms</a> of Topcoder.',
+                signUpTerms: 'Yes, I understand and agree to the <a href="https://www.topcoder.com/privacy" target="_new"">Privacy Policy</a> and <a href="https://www.topcoder.com/privacy"  target="_new">Terms</a> of Topcoder.',
                 signUpTitle: 'Join Topcoder',
                 signUpLabel: 'Sign Up',
                 signUpSubmitLabel: 'Sign Up',
