--- a/web-assets/static-pages/signup.html
+++ b/web-assets/static-pages/signup.html
@@ -105,8 +105,8 @@
                 <label>
                 <input id='user_privacy_policy' type="checkbox" value="on" class="input-text user_pripacy_policy">
                   <span>
-                    Yes, I understand and agree to the <a href="https://www.topcoder.com/policy/privacy-policy" target="_new">Privacy Policy</a> and 
-                    <a href="https://www.topcoder.com/policy/terms-and-conditions"
+                    Yes, I understand and agree to the <a href="https://www.topcoder.com/privacy" target="_new">Privacy Policy</a> and 
+                    <a href="https://www.topcoder.com/privacy"
                       target="_blank" rel="noopener noreferrer">Terms</a> of Topcoder.
                   </span>
                 </label>
