--- a/web-assets/static-pages/index.html
+++ b/web-assets/static-pages/index.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="https://accounts-auth0.{{DOMAIN}}/styles.css" />
   </head>
 
   <body class="center-align-card">
