--- a/web-assets/static-pages/dice-verify-callback.html
+++ b/web-assets/static-pages/dice-verify-callback.html
@@ -15,6 +15,7 @@
         window.parent.postMessage({ type: 'DICE_VERIFICATION_START' }, 'https://community-app.{{DOMAIN}}')
         window.parent.postMessage({ type: 'DICE_VERIFICATION_START' }, 'https://{{CA_SUB_1}}.{{DOMAIN}}')
         window.parent.postMessage({ type: 'DICE_VERIFICATION_START' }, 'https://{{CA_SUB_2}}.{{DOMAIN}}')
+        window.parent.postMessage({ type: 'DICE_VERIFICATION_START' }, 'https://account-settings.{{DOMAIN}}')
         const userManager = new Oidc.UserManager({
             response_type: "code",
             response_mode: "query",
@@ -30,6 +31,7 @@
                 window.parent.postMessage({ type: 'DICE_VERIFICATION', success: true, user }, 'https://community-app.{{DOMAIN}}')
                 window.parent.postMessage({ type: 'DICE_VERIFICATION', success: true, user }, 'https://{{CA_SUB_1}}.{{DOMAIN}}')
                 window.parent.postMessage({ type: 'DICE_VERIFICATION', success: true, user }, 'https://{{CA_SUB_2}}.{{DOMAIN}}')
+                window.parent.postMessage({ type: 'DICE_VERIFICATION', success: true, user }, 'https://account-settings.{{DOMAIN}}')
             },
             (error) => {
                 console.log(error)
@@ -37,6 +39,7 @@
                 window.parent.postMessage({ type: 'DICE_VERIFICATION', success: false }, 'https://community-app.{{DOMAIN}}')
                 window.parent.postMessage({ type: 'DICE_VERIFICATION', success: false }, 'https://{{CA_SUB_1}}.{{DOMAIN}}')
                 window.parent.postMessage({ type: 'DICE_VERIFICATION', success: false }, 'https://{{CA_SUB_2}}.{{DOMAIN}}')
+                window.parent.postMessage({ type: 'DICE_VERIFICATION', success: false }, 'https://account-settings.{{DOMAIN}}')
             }
         );
     </script>
