--- a/web-assets/static-pages/check_email.html
+++ b/web-assets/static-pages/check_email.html
@@ -13,9 +13,22 @@
   <link rel="stylesheet" href="./check_email.css" />
   <script src="https://tc-public-static-files.topcoder.com/topcoder-auth/js/jquery-3.5.1.min.js"></script>
   <script type="text/javascript" src="check_email.js"></script>
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-MXXQHG8');</script>
+  <!-- End Google Tag Manager -->
+  
 </head>
 
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MXXQHG8"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+
   <div class="mobile-header">
     <img class="tc-logo" src="./images/logo.svg" alt="Check Email" width="104" height="89" />
     <img class="tc-image" src="./images/topcoder.svg" alt="Check Email" width="104" height="89" />
