--- a/web-assets/static-pages/dice-login.html
+++ b/web-assets/static-pages/dice-login.html
@@ -52,7 +52,7 @@
             </div>
           </div>
           <div class="signin-footer">
-            <img class="dice-logo" src="https://diceid-images.s3.ap-south-1.amazonaws.com/PNG/Logo-Black@3x.png" />
+            <img class="dice-logo" src="./images/dice-logo-black.png" />
             <div class="powered">Powered by DICE ID</div>
           </div>
         </div>
